apps/tehwolfde/src/app/nav/desktop/desktop.component.scss
@use '../../../assets/styles/global';
@use '@tehw0lf/mvc';
@use '../shared-nav';

.mat-mdc-button {
  vertical-align: middle;
  line-height: 36px;
  font-size: global.$fontsize-button-md;
  margin: 0 10px 0 0;
  text-align: center;
  text-decoration: none;
}

.mat-button-wrapper {
  display: inline-flex;
  align-items: center;
  color: global.$linkcolor;
}

.nav-logo {
  height: 24px;
  width: 24px;
  margin: 0 4px 0 0;
}

.nav-row {
  border-radius: 4px;
  backdrop-filter: blur(15px);
}

.mat-toolbar-multiple-rows {
  border-radius: 4px;
  backdrop-filter: blur(15px);
}

.mat-toolbar-multiple-rows.dark {
  background-color: #222222;
}

.mat-toolbar-multiple-rows.light {
  background-color: rgb(212, 212, 212);
}

.github {
  vertical-align: middle;
}

span.mat-mdc-button-persistent-ripple.mdc-icon-button__ripple::before {
  background: transparent;
}

